@@ -38,8 +38,13 @@
 
 #ifdef __WXGTK__
 #include <gdk/gdk.h>
+#ifdef GDK_WINDOWING_X11
 #include <gdk/gdkx.h>
 #endif
+#endif
+
+// Only X11 backend is supported for wxGTK here
+#if !defined(__WXGTK__) || defined(GDK_WINDOWING_X11)
 
 // Various X11 Atoms used in this file:
 static Atom _NET_WM_STATE = 0;
@@ -924,5 +929,7 @@ bool wxDoLaunchDefaultBrowser(const wxString& url, int flags)
 
     return false;
 }
+
+#endif // !defined(__WXGTK__) || defined(GDK_WINDOWING_X11)
 
 #endif // __WXX11__ || __WXGTK__ || __WXMOTIF__
